# linseq

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.claude/skills/three-tailwind-fullstack-dev/: SKILL.md
.claude/skills/three-tailwind-tech-dev/: SKILL.md
.claude/skills/vue3-three-task-manage-cyber/: SKILL.md
docs/: AGENT_DUAL_MODE_PLAN.md  AGENT_REALTIME_COMMUNICATION_PLAN.md  ATEP_PROTOCOL.md  OPENCLAW_INTEGRATION_GUIDE.md  PREPROCESS_AGENT_GUIDE.md  QCLAW_AGENT_GUIDE.md  SYSTEM_VALUE_MAXIMIZATION_PLAN.md  integration_example.py  intranet-api-analysis.md  intranet-api.md  openclaw_client.py
scripts/: tauri-build.mjs  tauri-dev.mjs
server/: package-lock.json  package.json  scrape-tasks.cjs  seed.cjs  tsconfig.json
server/data/: linesequence.db  linesequence.db-shm  linesequence.db-wal
server/src/: index.ts  websocket.ts
server/src/db/: index.ts
src/: App.vue  components.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/api/: agent.spec.ts  agent.ts  group.ts  preprocess.ts  project.ts  settings.ts  sync.ts  task.ts  user.ts  version.ts
src/components/: AgentChatPanel.vue
src/composables/: useAgentChat.ts  useChatPanel.ts  useChatWs.ts  useCyberAnimations.ts  useCyberBackground.ts  useDesktop.ts  useNotification.ts  usePreprocess.ts  useTheme.ts
src/layouts/: MainLayout.vue
src/router/: index.ts
src/stores/: sync.ts  task.spec.ts  task.ts  user.ts
src/types/: index.ts
src/utils/: http.ts  persistence.spec.ts  persistence.ts
(+58 files in other folders)
