[package]
name = "linesequence"
version = "0.1.0"
description = "灵序 LineSequence - AI 任务自动化调度平台"
authors = ["you"]
edition = "2021"

[lib]
name = "linesequence_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
